--- a/lab1-student.qmd
+++ b/lab1-student.qmd
@@ -14,15 +14,11 @@ execute:
 
 ## Specifying Global Execute Options
 
-Execution options specify how the R code in your Quarto document should be
-displayed. This [guide](https://quarto.org/docs/computations/execution-options.html)
-provides descriptions on the options you can specify in a document's execution.
+Execution options specify how the R code in your Quarto document should be displayed. This [guide](https://quarto.org/docs/computations/execution-options.html) provides descriptions on the options you can specify in a document's execution.
 
-**Question 1** -- Add your name and the date to the YAML. 
+**Question 1** -- Add your name and the date to the YAML.
 
-**Question 2** -- Add an `execute` line to your YAML that includes the following
-options, (1) your source code is always output on the page, and (2) your
-document will render even if there are errors.
+**Question 2** -- Add an `execute` line to your YAML that includes the following options, (1) your source code is always output on the page, and (2) your document will render even if there are errors.
 
 ## Tooth Growth Dataset
 
@@ -38,14 +34,11 @@ data(ToothGrowth)
 summary(ToothGrowth)
 ```
 
-**Question 3** -- Let's spice this code up a bit. Delete `1 + 1` from the code
-chunk and paste in the code provided in the Lab 1 instructions. 
+**Question 3** -- Let's spice this code up a bit. Delete `1 + 1` from the code chunk and paste in the code provided in the Lab 1 instructions.
 
 ### Check the Data Documentation
 
-**Question 4** -- In your **console** (*not* in the Quarto document), type
-`?ToothGrowth` (or alternatively `help(ToothGrowth)`.Use the information that
-pops up in the *Help* pane in RStudio to fill in the blanks below. 
+**Question 4** -- In your **console** (*not* in the Quarto document), type `?ToothGrowth` (or alternatively `help(ToothGrowth)`.Use the information that pops up in the *Help* pane in RStudio to fill in the blanks below.
 
 *This dataset investigates the effect of Vitamin C on tooth growth in Guinea Pigs.*
 
@@ -53,9 +46,7 @@ pops up in the *Help* pane in RStudio to fill in the blanks below.
 
 *`ToothGrowth` is a data frame with 60 observations and 3 variables.*
 
-**Question 5** -- *Before* the code chunk, change the "Running the Provided
-Code" section header to a header that better describes the contents of this
-section (e.g., Tooth Growth Dataset).
+**Question 5** -- *Before* the code chunk, change the "Running the Provided Code" section header to a header that better describes the contents of this section (e.g., Tooth Growth Dataset).
 
 ## Creating a Plot
 
@@ -64,6 +55,11 @@ section (e.g., Tooth Growth Dataset).
 ```{r}
 #| echo: true
 #| label: creating-a-plot
+#| layout-ncol: 2  # Arrange plots in two columns
+#| fig-align: 'center'  # Center-align the figures
+#| fig-subcap: 
+#|   - "Tooth Length v.s. Supplement" 
+#|   - "Tooth Length v.s. Dose Supplement"
 
 library(tidyverse)
 
@@ -77,18 +73,15 @@ ToothGrowth %>%
   ggplot(mapping = aes(x = dose, y = len)) +
   geom_boxplot() +
   labs(x = "Dose of Supplement (mg/day)", y = "Length of Teeth (mm)")
+
+
+
 ```
 
-Now, run this code chunk! You should see two side-by-side boxplots, one plot
-comparing tooth length between the two supplement delivery methods and one plot
-comparing tooth length between the three different dosages uses. 
+Now, run this code chunk! You should see two side-by-side boxplots, one plot comparing tooth length between the two supplement delivery methods and one plot comparing tooth length between the three different dosages uses.
 
-**Question 7** -- Read over the [Quarto documentation on figure options](https://quarto.org/docs/authoring/figures.html#computations)
-and add an option (`#|`) to the above code chunk to make the figures print
-side-by-side (i.e., in one row) in the rendered HTML file. 
+**Question 7** -- Read over the [Quarto documentation on figure options](https://quarto.org/docs/authoring/figures.html#computations) and add an option (`#|`) to the above code chunk to make the figures print side-by-side (i.e., in one row) in the rendered HTML file.
 
-**Question 8** -- Specify in the code chunk options that these boxplots 
-should be **center aligned**.
+**Question 8** -- Specify in the code chunk options that these boxplots should be **center aligned**.
 
-**Question 9** -- Specify a **figure caption** for the boxplots (using a
-code-chunk option).
+**Question 9** -- Specify a **figure caption** for the boxplots (using a code-chunk option).
