--- a/lab1-student.qmd
+++ b/lab1-student.qmd
@@ -2,7 +2,11 @@
 title: "Lab 1: Introduction to Quarto"
 author: "Yanna Shirokova"
 date: "September 26, 2024"
-format: html
+format: 
+  html:
+    code-fold: true
+    theme: cosmo
+    toc: true
 editor: source
 embed-resources: true
 execute:
